--- a/src/produit.scss
+++ b/src/produit.scss
@@ -1,44 +1,102 @@
-
-*{
+* {
     box-sizing: border-box;
     margin: 0;
-    padding: 0
-    ;
-  }.product-list{
+    padding: 0;
+  }
+
+  .product-list {
     display: flex;
     width: 95%;
     height: 156px;
     border: 1px solid white;
     margin: 40px 0px 0px 30px;
-   padding-left: 16px;
-}
-.name{
-  display: flex;
-  margin-top: 20px;
-}
-.about-p{
+    padding-left: 16px;
+  }
+
+  .name {
+    display: flex;
+    margin-top: 20px;
+  }
+
+  .about-p {
     border: 1px solid white;
-    width: 165px ;
+    width: 165px;
     height: 30px;
-}
-.card{
+  }
+
+  .card {
     border: 1px solid white;
     border-top: none;
-    width: 165px ;
+    width: 165px;
     height: 116px;
-}
-.about-p1{
+  }
+
+  .about-p1 {
     border: 1px solid white;
-    width: 165px ;
+    width: 165px;
     height: 30px;
     margin-left: 20px;
-}
-.card1{
+  }
+
+  .card1 {
     border: 1px solid white;
-    width: 165px ;
+    width: 165px;
     height: 116px;
-    
-}
-.image{
+  }
+
+  .image {
     margin-top: 20px;
+  }
+
+  .product-table {
+    width: 95%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    margin-left: 30px;
+  }
+
+  .product-table th,
+  .product-table td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: center;
+  }
+
+  .product-table th {
+    background-color: #111111;
+    font-weight: bold;
+  }
+
+  .product-image {
+    width: 50px;
+    height: auto;
+  }
+
+  .no-stock {
+    color: rgb(7, 7, 7);
+    font-weight: bold;
+  }
+
+  .create-button {
+    margin-top: 5px;
+    padding: 5px 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  .create-button:hover {
+    background-color: #0056b3;
+  }
+  .flex-btn{
+    width: 98%;
+    display: flex;
+    justify-content: space-between;
+}
+.language-select{
+    background: #2a98ac;
+    color: white;
+    outline: none;
 }
