--- a/src/Dashboard.scss
+++ b/src/Dashboard.scss
@@ -9,7 +9,15 @@
   display: flex;
   height: 100%;
 }
-
+.flex-text{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 98%;
+}
+.p-main{
+  margin-top: 20px;
+}
 .profile {
   text-align: center;
   margin-bottom: 2rem;
@@ -91,6 +99,7 @@
   border: none;
   outline: none;
   padding-left: 20px;
+  margin-top: 7px
 }
 
 .stats {
@@ -188,6 +197,7 @@ padding-top: 15px;
   border-radius: 0px 20px 20px 0px;
   outline: none;
   border: none;
+  margin-top: 7px;
 }
 
 .icon-search {
