--- a/src/store.scss
+++ b/src/store.scss
@@ -97,6 +97,20 @@
     margin: 0px 0px 0px 50px;
   }
   .create-product-section input{
-   background: #e7e8e9;
+   background: #bab7c0;
    height: 20px;
+   padding-left: 10px;
+   margin-top: 5px;
   }
+  .create-btn{
+    background: #25742b;
+     border-radius: 5px;
+     width: 70px;
+     color: white;
+   }
+   .skip-btn{
+    background: #742525;
+     border-radius: 5px;
+     width: 70px;
+     color: white;
+   }
