--- a/src/style/store.scss
+++ b/src/style/store.scss
@@ -8,14 +8,16 @@
     margin: 20px 0px 0px 50px;
   }
   
-  .product {
+  .product-store {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 16px;
-    border: 1px solid #dddddd;
+    // border: 1px solid #dddddd;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background-color: #151616;
+    width: 190px;
   }
   
   
@@ -113,4 +115,7 @@
      border-radius: 5px;
      width: 70px;
      color: white;
+   }
+   .confirm{
+    color: rgb(163, 157, 157);
    }
