--- a/src/style/produit.scss
+++ b/src/style/produit.scss
@@ -12,7 +12,9 @@
     margin: 40px 0px 0px 30px;
     padding-left: 16px;
   }
-
+  tbody{
+    background: #215a9133;
+  }
   .name {
     display: flex;
     margin-top: 20px;
@@ -68,8 +70,9 @@
   }
 
   .product-image {
-    width: 50px;
+    width: 80px;
     height: auto;
+
   }
 
   .no-stock {
@@ -85,6 +88,7 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+  height: 30px;
   }
 
   .create-button:hover {
@@ -94,9 +98,11 @@
     width: 98%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .language-select{
-    background: #2a98ac;
+    background: #0f0f0f;
     color: white;
     outline: none;
+    border: none;
 }
