--- a/src/style/Login.scss
+++ b/src/style/Login.scss
@@ -5,7 +5,7 @@
   align-items: center;
   width: 400px;
   height: 420px;
-  background-color: #141414;
+  background-color: #3f8b81b7;
   border: 1px solid rgb(133, 127, 127);
   border-radius: 10px;
   margin-top: 100px;
