--- a/src/style/produit.scss
+++ b/src/style/produit.scss
@@ -59,7 +59,7 @@
 
   .product-table th,
   .product-table td {
-    border: 1px solid #ddd;
+    border: 1px solid #28759985;
     padding: 8px;
     text-align: center;
   }
