--- a/src/style/store.scss
+++ b/src/style/store.scss
@@ -6,6 +6,7 @@
     flex-wrap: wrap;
     gap: 20px;
     margin: 20px 0px 0px 50px;
+    position: absolute;
   }
   
   .product-store {
@@ -16,7 +17,7 @@
     // border: 1px solid #dddddd;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: #151616;
+    background-color: #2aacac6c;
     width: 190px;
   }
   
@@ -116,6 +117,56 @@
      width: 70px;
      color: white;
    }
+
+
    .confirm{
     color: rgb(163, 157, 157);
    }
+   .loading{
+  margin: 10px 0px 0px 50px;
+   }
+   .create-product-form{
+    margin-left: 50px;
+    margin-top: 10px;
+   }
+   .create-product-form input{
+    background: #333;
+    border:1px solid #376c85;
+    height: 50px;
+    padding-left: 10px;
+    margin-top: 5px;
+    color: white;
+    outline: none;
+    color: white;
+   }
+  
+   .add-product-btn{
+    background: #4586a0;
+    width: 100px;
+    height: 50px;
+    margin-left: 5px;
+    border-radius: 8px;
+    color: white;
+   }
+  .cancel-btn{
+    background: #a04560;
+    width: 100px;
+    height: 50px;
+    margin-left: 5px;
+    border-radius: 8px;
+    color: white;
+    
+    
+  }
+  .confirmation{
+    background: rgba(3, 3, 3, 0.897);
+    width: 600px;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 40px;
+    border-radius: 10px;
+    position: relative;
+    margin: 150px 0px 0px 250px;
+  }
