--- a/src/style/Dashboard.scss
+++ b/src/style/Dashboard.scss
@@ -171,7 +171,7 @@
 }
 
 .product {
- background: #000000;
+ background: #2f3131;
   width: 180px;
   height: 219px;
   @include border-radius(8px);
