add type to translation

--- a/src/style/store.scss
+++ b/src/style/store.scss
@@ -57,7 +57,7 @@
     background-color: #45a049;
   }
   .manage-content-button{
-     background-color: #376c85;
+     background-color: #97344a;
      color: white;
      padding: 10px;
      border: none;
