add type in Chart.tsx

--- a/src/style/Dashboard.scss
+++ b/src/style/Dashboard.scss
@@ -171,7 +171,7 @@
 }
 
 .product {
-  border: 1px solid #dfc116;
+  // border: 1px solid #dfc116;
  background: #2A2A3A;
   width: 180px;
   height: 219px;
