--- a/src/style/Dashboard.scss
+++ b/src/style/Dashboard.scss
@@ -171,8 +171,8 @@
 }
 
 .product {
-  border: 1px solid #dfc116;
- background:rgb(42, 42, 163);
+  // border: 1px solid #dfc116;
+ background: #2A2A3A;
   width: 180px;
   height: 219px;
   @include border-radius(8px);
