--- a/src/App.scss
+++ b/src/App.scss
@@ -6,9 +6,10 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
+  background: rgb(139, 140, 141);
   // background: linear-gradient(100deg, rgb(26, 26, 27) 0%, rgb(63, 71, 83) 61%);
   // ;
-  background: white;
+  
   color:rgb(14, 13, 13);
   display: flex;
   flex-direction: column;
